--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,9 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+    repositories {
+        maven { url "https://jitpack.io" }
+    }
     buildTypes {
         release {
             minifyEnabled false
@@ -33,5 +36,10 @@ dependencies {
     compile 'com.android.support:design:24.2.1'
     compile 'com.android.support:cardview-v7:+'
     compile 'org.greenrobot:greendao:3.2.0'
+    //Material Dialogs
+    compile('com.github.afollestad.material-dialogs:core:0.8.5.6@aar') {
+        transitive = true
+    }
+
     testCompile 'junit:junit:4.12'
 }
